# mav_control_rw

./: .gitignore  .travis.yml  README.md
mav_control_interface/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
mav_control_interface/include/mav_control_interface/: autopilot_interface.h  deadzone.h  mav_control_interface.h  mpc_queue.h  position_controller_interface.h  rc_interface.h  rc_interface_aci.h  rc_interface_mavros.h
mav_control_interface/src/: autopilot_interface.cpp  mav_control_interface.cpp  mav_control_interface_impl.cpp  mav_control_interface_impl.h  mpc_queue.cpp  parameters.cpp  parameters.h  position_controller_interface.cpp  rc_interface.cpp  rc_interface_aci.cpp  rc_interface_mavros.cpp  state_machine.cpp  state_machine.h  test_node.cpp
mav_disturbance_observer/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mav_disturbance_observer/cfg/: KFDisturbanceObserver.cfg
mav_disturbance_observer/include/mav_disturbance_observer/: KF_disturbance_observer.h
mav_disturbance_observer/msg/: ObserverState.msg
mav_disturbance_observer/resources/: disturbance_observer_falcon2.yaml  disturbance_observer_flourish.yaml
mav_disturbance_observer/src/: KF_disturbance_observer.cpp
mav_linear_mpc/: CHANGELOG.rst  CMakeLists.txt  package.xml
mav_linear_mpc/cfg/: LinearMPC.cfg
mav_linear_mpc/include/mav_linear_mpc/: linear_mpc.h  linear_mpc_node.h  solver.h
mav_linear_mpc/launch/: mav_linear_mpc.launch
mav_linear_mpc/lib/: libmav_linear_mpc_cvxgen_solver.dylib
mav_linear_mpc/resources/: linear_mpc_firefly.yaml  linear_mpc_flourish.yaml  linear_mpc_hummingbird.yaml  msf_parameters_sim.yaml
mav_linear_mpc/src/: linear_mpc.cpp  linear_mpc_node.cpp  steady_state_calculation.cpp
mav_linear_mpc_m100/: CMakeLists.txt
mav_linear_mpc_m100/cfg/: LinearMPC.cfg
mav_linear_mpc_m100/include/mav_linear_mpc/: steady_state_calculation.h
mav_linear_mpc_m100/launch/: mav_linear_mpc_sim.launch  mav_linear_mpc_sim_msf.launch
mav_linear_mpc_m100/lib/: variables_definition.c
mav_linear_mpc_m100/resources/: linear_mpc_falcon2.yaml
mav_linear_mpc_m100/src/: linear_mpc.cpp
mav_lowlevel_attitude_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mav_lowlevel_attitude_controller/cfg/: PIDAttitude.cfg
mav_lowlevel_attitude_controller/include/mav_lowlevel_attitude_controller/: PID_attitude_controller.h  PID_attitude_controller_node.h
mav_lowlevel_attitude_controller/launch/: PID_attitude_controller.launch  mav_lowlevel_controller.launch
mav_lowlevel_attitude_controller/resources/: PID_attitude_firefly.yaml  PID_attitude_hummingbird.yaml  PID_attitude_neo11.yaml
mav_lowlevel_attitude_controller/src/: PID_attitude_controller.cc  PID_attitude_controller_node.cc
mav_nonlinear_mpc/: CHANGELOG.rst  CMakeLists.txt  package.xml
mav_nonlinear_mpc/cfg/: NonLinearMPC.cfg
mav_nonlinear_mpc/cmake/: FindOpenBLAS.cmake
mav_nonlinear_mpc/include/mav_nonlinear_mpc/: nonlinear_mpc.h  nonlinear_mpc_node.h
mav_nonlinear_mpc/launch/: mav_nonlinear_mpc.launch  mav_nonlinear_mpc_sim.launch
mav_nonlinear_mpc/resources/: nonlinear_mpc_firefly.yaml  nonlinear_mpc_hummingbird.yaml  nonlinear_mpc_neo11.yaml
mav_nonlinear_mpc/solver/: Makefile  acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  acado_solver_mex.c  make_acado_solver.m  nmpc_solver_setup.m  test.c
mav_nonlinear_mpc/solver_made_from_cpp/: CMakeLists.txt  README.md  nmpc_solver_setup.cpp
mav_nonlinear_mpc/src/: nonlinear_mpc.cc  nonlinear_mpc_node.cc
