<?xml version="1.0"?>
<package format="2">
  <name>mav_control_interface</name>
  <version>0.0.0</version>
  <description>This package provedes libraries to interface mav controllers</description>

  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>mav_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
</package>
