<?xml version="1.0"?>
<package format="2">
  <name>mav_control_interface</name>
  <version>1.0.0</version>
  <description>This package provedes libraries to interface mav controllers</description>

  <maintainer email="mina.kamel@mavt.ethz.ch">Mina Kamel</maintainer>

  <author>Markus Achtelik</author>
  <author>Mina Kamel</author>
  <author>Michael Burri</author>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>mav_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>
</package>
