<package format="2">
  <name>mav_linear_mpc</name>
  <version>1.0.0</version>
  <description>mav linear mpc</description>

  <maintainer email="mina.kamel@mavt.ethz.ch">Mina Kamel</maintainer>

  <author>Mina Kamel</author>
  <author>Michael Burri</author>
  <author>Markus Achtelik</author>

  <license>ASL 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>mav_control_interface</depend>
  <depend>mav_disturbance_observer</depend>
  <depend>message_runtime</depend>
</package>
