<?xml version="1.0"?>
<package format="2">
  <name>mav_lowlevel_attitude_controller</name>
  <version>0.0.0</version>
  <description>
    low level attitudr controller for multirotor system
  </description>

  <maintainer email="fmina@ethz.com">Mina Kamel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>mav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf</depend>
</package>
