<?xml version="1.0"?>
<package format="2">
  <name>mav_nonlinear_mpc</name>
  <version>1.0.0</version>
  <description>
    Nonlinear model predictive controller for trajectory tracking of multirotor system
  </description>

  <maintainer email="mina.kamel@mavt.ethz.com">Mina Kamel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf</depend>
  <depend>mav_control_interface</depend>
  <depend>mav_disturbance_observer</depend>

</package>
